# ImageCropper

./: .gitignore  ImageCropper.spec  README.md  pyproject.toml
imagecropper/: gui.py  image_cropper.py
